fix: Fix confidential Sheet size on tablet devices

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -285,7 +285,6 @@ li::before {
 .confidentialSheet {
     width: 100%;
     height: 100%;
-    display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
